text space formatter overlapping issue fixes

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -156,7 +156,7 @@ body, html {
     position: absolute;
     width: 100%;
     /* background: black; */
-    height: 346px;
+    height: 323px;
     border: 1px solid;
     background: url(../images/main.jpg);
     background-size: cover;
@@ -187,7 +187,7 @@ body, html {
 
 .side-nav {
     width: 100%;
-    min-height: 290px;
+    min-height: 300px;
 }
 
 .side-nav-circle {
@@ -195,15 +195,16 @@ body, html {
     background-color: #919E57;
     border-radius: 50%;
     width: 313px;
-    height: 320px;
+    height: 344px;
     left: -112px;
     top: -27px;
     z-index: -1;
 }
 
 .side-nav ul {
-    margin-left: 30px;
+    margin-left: 24px;
     margin-top: 18px;
+    padding-right: 5px;
 }
 
 .side-nav ul li {
@@ -212,13 +213,14 @@ body, html {
     color: #03030280;
     padding: 6px 35px;
     padding-left: 0px;
-    line-height: 1.3em;
+    line-height: 1.0em !important;
 }
 
 .side-nav ul li a {
     text-decoration: none;
     color: #292B17;
     font-weight: 600;
+    line-height: 1.3em !important;
 }
 
 .side-nav ul li a:hover {
@@ -237,7 +239,7 @@ body, html {
     font-family: "poppins-regular";
     font-size: 11px;
     line-height: 15px;
-    margin-left: 30px;
+    margin-left: 19px;
     margin-right: 11px;
     position: fixed;
     bottom: 0px;
@@ -401,7 +403,7 @@ body, html {
     border-top-left-radius: 9px;
     border-top-right-radius: 9px;
     opacity: 0.95;
-    min-height: 249px;
+    min-height: 232px;
     display: none;
 }
 
@@ -1066,14 +1068,14 @@ a.graylink{
 }
 .cardmarginTop{
     position: relative;
-    margin-top: 249px;
+    margin-top: 232px;
     display: none;
 }
 .card-cover-img.FixHeight{
-    height: 249px;
+    height: 232px;
 }
 .card-cover-img.MinHeight{
-    min-height: 249px;
+    min-height: 232px;
 }
 table.kwlchart {
     border: 0px solid #000000;
@@ -1310,7 +1312,7 @@ table.kwlchart tbody tr td:last-child {
   }
   @-webkit-keyframes textSlideTop{
     from {
-        margin-top: 249px;
+        margin-top: 232px;
     }
   
     to {
@@ -1325,12 +1327,12 @@ table.kwlchart tbody tr td:last-child {
   
     to {
       /* left: auto; */
-      height: 249px;
+      height: 232px;
     }
   }
   @-webkit-keyframes cardSlide{
     from {
-        margin-top: 249px;
+        margin-top: 232px;
     }
   
     to {
